// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`text (isCI = false) > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = false) > can cancel 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "■  foo
│",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = false) > defaultValue sets the value but does not render 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  bar",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = false) > empty string when no value and no default 1`] = `
[
  "[?25l",
  "│
◆  foo
│    (hit Enter to use default)
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = false) > placeholder is not used as value when pressing enter 1`] = `
[
  "[?25l",
  "│
◆  foo
│    (hit Enter to use default)
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  default-value",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = false) > renders cancelled value if one set 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  x█",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  xy█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "■  foo
│  xy
│",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = false) > renders message 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = false) > renders placeholder if set 1`] = `
[
  "[?25l",
  "│
◆  foo
│  bar
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = false) > renders submitted value 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  x█",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  xy█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  xy",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = false) > validation errors render and clear (using Error) 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  x█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "▲  foo
│  x█
└  should be xy
",
  "[999D[4A",
  "[1B",
  "[J",
  "◆  foo
│  xy█
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  xy",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = false) > validation errors render and clear 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  x█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "▲  foo
│  x█
└  should be xy
",
  "[999D[4A",
  "[1B",
  "[J",
  "◆  foo
│  xy█
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  xy",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = true) > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = true) > can cancel 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "■  foo
│",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = true) > defaultValue sets the value but does not render 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  bar",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = true) > empty string when no value and no default 1`] = `
[
  "[?25l",
  "│
◆  foo
│    (hit Enter to use default)
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = true) > placeholder is not used as value when pressing enter 1`] = `
[
  "[?25l",
  "│
◆  foo
│    (hit Enter to use default)
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  default-value",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = true) > renders cancelled value if one set 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  x█",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  xy█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "■  foo
│  xy
│",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = true) > renders message 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = true) > renders placeholder if set 1`] = `
[
  "[?25l",
  "│
◆  foo
│  bar
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = true) > renders submitted value 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  x█",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  xy█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  xy",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = true) > validation errors render and clear (using Error) 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  x█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "▲  foo
│  x█
└  should be xy
",
  "[999D[4A",
  "[1B",
  "[J",
  "◆  foo
│  xy█
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  xy",
  "
",
  "[?25h",
]
`;

exports[`text (isCI = true) > validation errors render and clear 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  x█",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "▲  foo
│  x█
└  should be xy
",
  "[999D[4A",
  "[1B",
  "[J",
  "◆  foo
│  xy█
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  xy",
  "
",
  "[?25h",
]
`;
